# django-pony-express

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  manage.py  pyproject.toml  settings.py  setup.cfg
.ambient-package-update/: metadata.py
.ambient-package-update/templates/snippets/: content.tpl  tagline.tpl
.github/workflows/: ci.yml  quality-gate.yml  release.yml
django_pony_express/: __init__.py  errors.py  settings.py
django_pony_express/locale/de/LC_MESSAGES/: django.mo  django.po
django_pony_express/services/: base.py  tests.py
django_pony_express/services/async/: thread.py
django_pony_express/services/asynchronous/: thread.py
docs/: conf.py  index.rst
docs/features/: changelog.md  changelog.rst  configuration.md  factories.md  internal_api.md  introduction.md  mail.md  tests.md
scripts/unix/: install_requirements.sh  publish_to_pypi.sh
scripts/windows/: install_requirements.ps1  publish_to_pypi.ps1
testapp/: manage.py  urls.py
testapp/templates/testapp/: test_email.html  test_email.txt
tests/: test_email_test_service.py  test_mail_services.py
tests/files/: testfile.txt
tests/services/asynchronous/: test_thread_email.py
tests/services/base/: test_base_mail_factory.py  test_base_mail_service.py
tests/services/tests/: test_email_test_service.py
